git-svn-id: http://svn.vdombox.ru/flextools/trunk@5927 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeColorItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeColorItemRenderer.mxml
@@ -19,8 +19,10 @@
 
 			[Bindable]
 			private var _attributeVO : AttributeVO;
-
+			
 			[Bindable]
+			private var displayName : String;
+			
 			private var _attributeDescriptionVO : AttributeDescriptionVO;
 
 			private var codeInterfaceRE : RegExp = /^(\w*)\((.*)\)/;
@@ -34,6 +36,7 @@
 
 				_attributeVO = value.attributeVO;
 				_attributeDescriptionVO = value.attributeDescriptionVO;
+				displayName = _attributeDescriptionVO.displayName;
 
 				var codeInterface : Object = {}
 				var matches : Array = _attributeDescriptionVO.codeInterface.match( codeInterfaceRE );
@@ -160,7 +163,7 @@
 	</s:layout>
 
 	<s:RichText id="nameLabel"
-				minHeight="21" text="{ _attributeDescriptionVO.displayName }" width="100%"
+				minHeight="21" text="{ displayName }" width="100%"
 				paddingBottom="2" paddingRight="5" paddingTop="2" textAlign="right" verticalAlign="middle" />
 
 	<attributeRenderers:ColorPicker id="valueField"
