--- a/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/GalleryItemRenderer.mxml
+++ b/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/GalleryItemRenderer.mxml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:ItemRenderer 
-	xmlns:fx="http://ns.adobe.com/mxml/2009"
-	xmlns:s="library://ns.adobe.com/flex/spark"
-	xmlns:mx="library://ns.adobe.com/flex/halo">
+<s:ItemRenderer xmlns:fx="http://ns.adobe.com/mxml/2009"
+				xmlns:s="library://ns.adobe.com/flex/spark"
+				xmlns:mx="library://ns.adobe.com/flex/halo">
 
 	<fx:Script>
 		<![CDATA[
 			public override function set data( value : Object ) : void
 			{
-				itemImage.source = value.content;
+				itemImage.source = value && value.content ? value.content : null;
 			}
 		]]>
 	</fx:Script>
@@ -22,19 +21,25 @@
 		<s:State name="selected" />
 	</s:states>
 
-	<s:Rect 
-		bottom="0" left="0" right="0" top="0">
+	<s:Rect bottom="0" left="0" right="0" top="0">
 
 		<s:fill>
 
-			<s:SolidColor 
-				color="0x999999"
-				alpha="0" alpha.hovered="0.2" alpha.selected="0.6" />
+			<s:SolidColor color="0x999999"
+						  alpha="0" alpha.hovered="0.2" alpha.selected="0.2" />
 		</s:fill>
 	</s:Rect>
 
-	<s:VGroup>
+	<mx:Image id="itemImage"
+			  height="64" width="64" />
 
-		<mx:Image id="itemImage" />
-	</s:VGroup>
+	<s:Rect bottom="0" left="0" right="0" top="0"
+			includeIn="selected">
+
+		<s:stroke>
+
+			<s:SolidColorStroke color="white"
+								weight="1" />
+		</s:stroke>
+	</s:Rect>
 </s:ItemRenderer>
