--- a/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/IconChooser.mxml
+++ b/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/IconChooser.mxml
@@ -1,21 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:VGroup 
-	xmlns:mx="library://ns.adobe.com/flex/halo"
-	xmlns:fx="http://ns.adobe.com/mxml/2009"
-	xmlns:s="library://ns.adobe.com/flex/spark">
+<s:VGroup xmlns:mx="library://ns.adobe.com/flex/halo"
+		  xmlns:fx="http://ns.adobe.com/mxml/2009"
+		  xmlns:s="library://ns.adobe.com/flex/spark">
 
 	<fx:Script>
 		<![CDATA[
+			import mx.events.FlexEvent;
+			import spark.skins.spark.ListSkin;
 			import net.vdombox.ide.modules.applicationsManagment.events.IconChooserEvent;
+
+			protected function iconsList_creationCompleteHandler( event : FlexEvent ) : void
+			{
+				var d : * = "";
+				if ( iconsList.skin && iconsList.skin[ "background" ] )
+					iconsList.skin[ "background" ].alpha = 0;
+			}
 		]]>
 	</fx:Script>
 
+	<s:states>
+
+		<s:State name="default" />
+
+		<s:State name="gallery" />
+	</s:states>
+
 	<mx:Image id="selectedIcon"
-		height="64" width="64" />
+			  height="64" width="64" />
+
+	<s:Label buttonMode="true" text="Select Icon:"
+			 fontFamily="Verdana" fontSize="14" textDecoration="underline"
+			 click="currentState = currentState == 'default' ? 'gallery' : 'default'; invalidateSize();" />
 
 	<s:List id="iconsList"
-		height="100" width="100%"
-		itemRenderer="net.vdombox.ide.modules.applicationsManagment.view.components.GalleryItemRenderer">
+			height="100%" width="100%"
+			creationComplete="iconsList_creationCompleteHandler(event)"
+			includeIn="gallery" itemCreationPolicy="immediate"
+			itemRenderer="net.vdombox.ide.modules.applicationsManagment.view.components.GalleryItemRenderer">
 
 		<s:layout>
 
@@ -23,10 +44,7 @@
 		</s:layout>
 	</s:List>
 
-	<s:Label 
-		buttonMode="true" text="Load from computer"
-		
-		fontFamily="Verdana" fontSize="14" textDecoration="underline"
-		
-		click="dispatchEvent( new IconChooserEvent( IconChooserEvent.LOAD_ICON ))" />
+	<s:Label buttonMode="true" text="Load from computer"
+			 fontFamily="Verdana" fontSize="14" textDecoration="underline"
+			 click="dispatchEvent( new IconChooserEvent( IconChooserEvent.LOAD_ICON ))" />
 </s:VGroup>
