--- a/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/Toolset.mxml
+++ b/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/Toolset.mxml
@@ -17,8 +17,8 @@
 		<s:HorizontalLayout />
 	</s:layout>
 	
-	<!--<s:ToggleButton id="createNewApplicatoin"
+	<s:ToggleButton id="createNewApplicatoin"
 					label="New Application"
-					click="dispatchEvent( new ToolsetEvent( ToolsetEvent.OPEN_CREATE_APPLICATION ) ); createNewApplicatoin.selected = false;"/>-->
+					click="dispatchEvent( new ToolsetEvent( ToolsetEvent.OPEN_CREATE_APPLICATION ) ); createNewApplicatoin.selected = false;"/>
 	
 </s:Group>
