--- a/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/Toolset.mxml
+++ b/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/Toolset.mxml
@@ -1,24 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
-		 xmlns:s="library://ns.adobe.com/flex/spark" 
+<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009"
+		 xmlns:s="library://ns.adobe.com/flex/spark"
 		 xmlns:mx="library://ns.adobe.com/flex/halo"
+		 xmlns:components="net.vdombox.ide.modules.applicationsManagment.view.components.*"
 		 
-		 implements="net.vdombox.ide.common.interfaces.IToolset">
-	
+		 implements="net.vdombox.ide.common.interfaces.IToolset"
+		 
+		 height="100%">
+
 	<fx:Script>
 		<![CDATA[
+			import mx.events.FlexEvent;
 			import net.vdombox.ide.common.interfaces.IToolset;
 			import net.vdombox.ide.modules.applicationsManagment.events.ToolsetEvent;
-			
+			import net.vdombox.ide.modules.applicationsManagment.view.skins.ToolsetButtonSkin;
 		]]>
 	</fx:Script>
-	
+
 	<s:layout>
+
 		<s:HorizontalLayout />
 	</s:layout>
-	
-	<s:ToggleButton id="createNewApplicatoin"
-					label="New Application"
-					click="dispatchEvent( new ToolsetEvent( ToolsetEvent.OPEN_CREATE_APPLICATION ) ); createNewApplicatoin.selected = false;"/>
-	
+
+	<components:ToolsetButton id="createNewApplicatoin" icon="@Embed('icons/scripts_icon.png')"
+							  height="100%" label="New Application"
+							  click="dispatchEvent( new ToolsetEvent( ToolsetEvent.OPEN_CREATE_APPLICATION ) )"
+							  skinClass="net.vdombox.ide.modules.applicationsManagment.view.skins.ToolsetButtonSkin" />
 </s:Group>
