--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/Toolset.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/Toolset.mxml
@@ -1,16 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:Group xmlns:fx="http://ns.adobe.com/mxml/2009"
 		 xmlns:mx="library://ns.adobe.com/flex/halo"
-		 xmlns:s="library://ns.adobe.com/flex/spark">
+		 xmlns:s="library://ns.adobe.com/flex/spark"
+		 xmlns:components="net.vdombox.ide.modules.tree.view.components.*"
+		 
+		 height="100%">
 
 	<fx:Metadata> 
 		[ResourceBundle("Tree_General")] 
 	</fx:Metadata>
 
 	<s:layout>
+
 		<s:HorizontalLayout />
 	</s:layout>
 
-	<s:ToggleButton id="toolsetButton"
-					label="{ resourceManager.getString( 'Tree_General', 'toolset_button_label' ) }" />
+	<components:ToolsetButton id="toolsetButton"
+							  height="100%" icon="@Embed('icons/tree_icon.png')"
+							  label="{ resourceManager.getString( 'Tree_General', 'toolset_button_label' ) }"
+							  skinClass="net.vdombox.ide.modules.tree.view.skins.ToolsetButtonSkin" />
 </s:Group>
