--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/MainWindowSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/MainWindowSkin.mxml
@@ -147,9 +147,9 @@
 
 				<s:LinearGradient rotation="90">
 
-					<s:GradientEntry color="0xCCCCCC" />
+					<s:GradientEntry color="0xB5B6B8" />
 
-					<s:GradientEntry color="0x888888" />
+					<s:GradientEntry color="0x77787C" />
 				</s:LinearGradient>
 			</s:fill>
 		</s:Rect>
@@ -167,11 +167,11 @@
 				<s:HorizontalLayout paddingLeft="100" verticalAlign="middle" />
 			</s:layout>
 
-			<s:Group id="toolsetBar">
+			<s:Group id="toolsetBar" width="100%" height="100%">
 
 				<s:layout>
 
-					<s:HorizontalLayout />
+					<s:HorizontalLayout gap="0"/>
 				</s:layout>
 			</s:Group>
 			<!--<mx:Spacer width="100%" />
