--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ToolbarButtonSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ToolbarButtonSkin.mxml
@@ -239,7 +239,7 @@
 		</s:stroke>
 	</s:Rect>
 
-	<mx:Image id="iconPart" />
+	<mx:Image top="2" left="2" id="iconPart" />
 	<!-- layer 8: text -->
 
 	<s:Label id="labelDisplay"
