--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/Body.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/Body.mxml
@@ -1,8 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009"
-		 xmlns:mx="library://ns.adobe.com/flex/halo"
-		 xmlns:s="library://ns.adobe.com/flex/spark"
-		 
-		 height="100%" width="100%"
-		 xmlns:components="net.vdombox.ide.modules.events.view.components.*">
-</s:Group>
+<s:HGroup xmlns:fx="http://ns.adobe.com/mxml/2009"
+		  xmlns:mx="library://ns.adobe.com/flex/halo"
+		  xmlns:s="library://ns.adobe.com/flex/spark"
+		  xmlns:components="net.vdombox.ide.modules.events.view.components.*"
+		  
+		  height="100%" width="100%">
+
+	<components:WorkArea height="100%" width="100%" />
+
+	<s:VGroup height="100%" width="220">
+
+		<components:ObjectsTreePanel id="objectsTreePanel"
+									 width="100%" />
+
+		<components:EventsPanel id="eventsPanel"
+								width="100%" />
+	</s:VGroup>
+</s:HGroup>
