git-svn-id: http://svn.vdombox.ru/flextools/trunk@5951 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/WorkAreaSkin.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/WorkAreaSkin.mxml
@@ -16,5 +16,20 @@
 		<s:State name="disabled" />
 	</s:states>
 
+	<s:Rect id="backgroundRect"
+			bottom="0" left="0" right="0" top="0">
+
+		<s:fill>
+
+			<s:SolidColor color="gray"
+						  alpha=".5" />
+		</s:fill>
+
+		<s:stroke>
+
+			<s:SolidColorStroke />
+		</s:stroke>
+	</s:Rect>
+
 	<s:Group id="contentGroup" />
 </s:SparkSkin>
