--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/Body.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/Body.mxml
@@ -4,9 +4,11 @@
 		  xmlns:s="library://ns.adobe.com/flex/spark"
 		  xmlns:components="net.vdombox.ide.modules.events.view.components.*"
 		  
-		  height="100%" width="100%">
+		  height="100%" width="100%"
+		  paddingBottom="5" paddingLeft="5" paddingRight="5" paddingTop="5">
 
-	<components:WorkArea height="100%" width="100%" />
+	<components:WorkArea id="workArea"
+						 height="100%" width="100%" />
 
 	<s:VGroup height="100%" width="220">
 
