--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/EventsPanelSkin.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/EventsPanelSkin.mxml
@@ -1,4 +1,5 @@
-<s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark"
+<s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009"
+			 xmlns:s="library://ns.adobe.com/flex/spark"
 			 
 			 creationComplete="creationCompleteHandler()">
 
@@ -16,9 +17,11 @@
 			import mx.collections.ArrayList;
 			import mx.utils.ObjectProxy;
 
-			public var eventsTitleObject : ObjectProxy = new ObjectProxy( { title: "one" } );
+			import spark.skins.spark.DefaultItemRenderer;
 
-			public var actionsTitleObject : ObjectProxy = new ObjectProxy( { title: "two" } );
+			public var eventsTitleObject : ObjectProxy = new ObjectProxy( { title: "Events" } );
+
+			public var actionsTitleObject : ObjectProxy = new ObjectProxy( { title: "Actions" } );
 
 			override protected function updateDisplayList( unscaledWidth : Number, unscaledHeight : Number ) : void
 			{
@@ -32,20 +35,20 @@
 			protected function creationCompleteHandler() : void
 			{
 				titleBar.dataProvider = new ArrayList( [ eventsTitleObject, actionsTitleObject ] );
+				titleBar.selectedIndex = 0;
+
+				DefaultItemRenderer
 			}
 
-			protected function titleBar_clickHandler(event:MouseEvent):void
+			protected function titleBar_clickHandler( event : MouseEvent ) : void
 			{
-				// TODO Auto-generated method stub
+				if ( currentState == "events" )
+					currentState = "actions";
+				else
+					currentState = "events";
 			}
-
 		]]>
 	</fx:Script>
-
-	<s:layout>
-
-		<s:VerticalLayout gap="0" />
-	</s:layout>
 
 	<s:states>
 
@@ -54,27 +57,42 @@
 		<s:State name="actions" />
 	</s:states>
 
-	<s:ButtonBar id="titleBar"
-				 labelField="title" click="titleBar_clickHandler(event)" />
+	<s:RectangularDropShadow id="dropShadow"
+							 bottom="0" color="#000000" left="0" right="0" top="0"
+							 alpha="0.32" angle="90" blRadius="5" blurX="20" blurY="20" brRadius="5"
+							 distance="11" tlRadius="5" trRadius="5" />
 
-	<s:Group width="100%" height="100%">
+	<s:VGroup bottom="0" left="0" right="0" top="0"
+			  gap="0">
 
-		<s:Rect height="100%" width="100%"
-				includeIn="events">
+		<s:ButtonBar id="titleBar"
+					 labelField="title"
+					 click="titleBar_clickHandler(event)" />
+
+		<s:Group height="100%" width="100%">
+
+			<s:List id="evetsList"
+					height="100%" labelField="name" width="100%"
+					includeIn="events" itemCreationPolicy="immediate"
+					itemRenderer="net.vdombox.ide.modules.events.view.components.EventItemRenderer" />
+
+			<s:List id="actionsList"
+					height="100%" labelField="name" width="100%"
+					includeIn="actions" itemCreationPolicy="immediate"
+					itemRenderer="net.vdombox.ide.modules.events.view.components.ActionItemRenderer" />
+		</s:Group>
+
+		<s:Rect height="15" width="100%"
+				bottomLeftRadiusX="5" bottomRightRadiusX="5">
 
 			<s:fill>
 
-				<s:SolidColor color="red" />
+				<s:SolidColor color="0xD4D4D4" />
+				<!--<s:LinearGradient rotation="90">
+					 <s:GradientEntry color="0xDADADA" />
+					 <s:GradientEntry color="0xC5C5C5" />
+					 </s:LinearGradient>-->
 			</s:fill>
 		</s:Rect>
-
-		<s:Rect height="100%" width="100%"
-				includeIn="actions">
-
-			<s:fill>
-
-				<s:SolidColor color="green" />
-			</s:fill>
-		</s:Rect>
-	</s:Group>
+	</s:VGroup>
 </s:SparkSkin>
