--- a/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/ApplicationItemRenderer.mxml
+++ b/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/ApplicationItemRenderer.mxml
@@ -2,7 +2,7 @@
 <s:ItemRenderer
 	xmlns:fx="http://ns.adobe.com/mxml/2009" 
 	xmlns:s="library://ns.adobe.com/flex/spark" 
-	xmlns:mx="library://ns.adobe.com/flex/halo"
+	xmlns:mx="library://ns.adobe.com/flex/mx"
 				
 	width="100%" height="115"
 	buttonMode="true"
