git-svn-id: http://svn.vdombox.ru/flextools/trunk@5958 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/InitialWindowSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/InitialWindowSkin.mxml
@@ -24,12 +24,13 @@
 		<s:Rect id="backgroundRect"
 				left="0" right="0" top="0" bottom="0">
 			<s:fill>
-				<mx:LinearGradient rotation="90">
-					<mx:entries>
-						<mx:GradientEntry color="0x474b50" ratio="0.0" />
-						<mx:GradientEntry color="0x151515" ratio="0.7" />
-					</mx:entries>
-				</mx:LinearGradient>
+				<s:LinearGradient rotation="90">
+					<s:entries>
+						<s:GradientEntry color="0x474b50" ratio="0.0" />
+						<s:GradientEntry color="0x151515" ratio="0.7" />
+					</s:entries>
+							 
+				</s:LinearGradient>
 			</s:fill>
 		</s:Rect>
 		
