--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/LoginView.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/LoginView.mxml
@@ -25,7 +25,7 @@
 		<s:HGroup width="100%" verticalAlign="middle">
 			<s:Label text="{ resourceManager.getString( 'LoginForm', 'language' ) }"
 					 width="100%" textAlign="right"/>
-			<mx:ComboBox id="selectLang"
+			<s:ComboBox id="selectLang"
 						 width="240" />
 		</s:HGroup>
 	</s:VGroup>
