--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/ToolsetButtonSkin.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/ToolsetButtonSkin.mxml
@@ -17,7 +17,7 @@
 	 @productversion Flex 4
 -->
 <s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009"
-			 xmlns:mx="library://ns.adobe.com/flex/halo"
+			 xmlns:mx="library://ns.adobe.com/flex/mx"
 			 xmlns:s="library://ns.adobe.com/flex/spark"
 			 
 			 minHeight="21" minWidth="21"
